Chrome OS: Fix DCHECK in Offline Gaia screen.

Offline Gaia did not have dedicated API, so it crashed when trying to
sign-in as non-existing user. This CL adds a dedicated API which displays error
message to user.

Bug: 863847
Cq-Include-Trybots: luci.chromium.try:closure_compilation
Change-Id: I8354a88befb7cb99a64519c3f3d07449ead8fc4d
Reviewed-on: https://chromium-review.googlesource.com/1141654
Commit-Queue: Alexander Alekseev <alemate@chromium.org>
Reviewed-by: Roman Sorokin <rsorokin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576256}
Former-commit-id: 71fd2e939239d0fb829c4061999736ab364bdbbe