chrome/browser/ui/webui/chromeos/login/signin_screen_handler.h
@@ -361,6 +361,8 @@ class SigninScreenHandler
   void HandleAuthenticateUser(const AccountId& account_id,
                               const std::string& password,
                               bool authenticated_by_pin);
+  void HandleCompleteOfflineAuthentication(const std::string& email,
+                                           const std::string& password);
   void HandleAttemptUnlock(const std::string& username);
   void HandleLaunchIncognito();
   void HandleLaunchPublicSession(const AccountId& account_id,
@@ -407,6 +409,11 @@ class SigninScreenHandler
   void HandleRequestNewNoteAction(const std::string& request_type);
   void HandleNewNoteLaunchAnimationDone();
   void HandleCloseLockScreenApp();
+
+  // Implements user sign-in.
+  void AuthenticateExistingUser(const AccountId& account_id,
+                                const std::string& password,
+                                bool authenticated_by_pin);
 
   // Sends the list of |keyboard_layouts| available for the |locale| that is
   // currently selected for the public session identified by |user_id|.
