chrome/browser/resources/chromeos/login/screen_gaia_signin.js
@@ -1084,8 +1084,8 @@ login.createScreen('GaiaSigninScreen', 'gaia-signin', function() {
       } else if (credentials.useOffline) {
         this.email = credentials.email;
         chrome.send(
-            'authenticateUser',
-            [credentials.email, credentials.password, false]);
+            'completeOfflineAuthentication',
+            [credentials.email, credentials.password]);
       } else if (credentials.authCode) {
         chrome.send('completeAuthentication', [
           credentials.gaiaId, credentials.email, credentials.password,
